--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2919,6 +2919,19 @@
   url       = {http://dl.acm.org/citation.cfm?id=2390716},
 }
 
+@Article{Band2018,
+  author    = {Band, G.},
+  title     = {Bollywood Movies and Social Media Analytics},
+  journal   = {Helix},
+  year      = {2018},
+  volume    = {8},
+  number    = {5},
+  pages     = {3843-3845},
+  doi       = {10.29042/2018-3843-3845},
+  owner     = {Vincent},
+  timestamp = {2023.03.15},
+}
+
 @Article{Bandelj2003,
   author    = {Bandelj, N.},
   title     = {How Method Actors Create Character Roles},
@@ -4474,6 +4487,19 @@
   doi       = {10.4324/9781315114668-13},
   owner     = {Vincent},
   timestamp = {2020.11.17},
+}
+
+@Article{Beyhan2020,
+  author    = {Beyhan, B. and Erkiliç, H.},
+  title     = {Evolution of Turkish Movie Cluster: A Social Network Analysis Perspective},
+  journal   = {METU Journal of the Faculty of Architecture},
+  year      = {2020},
+  volume    = {37},
+  number    = {2},
+  pages     = {187-216},
+  doi       = {10.4305/metu.jfa.2020.2.9},
+  owner     = {Vincent},
+  timestamp = {2023.03.15},
 }
 
 @Article{Bezerianos2010,
@@ -27114,6 +27140,44 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.06.03},
 }
 
+@Article{Kumar2013,
+  author    = {Kumar, S. and Jan, J. M.},
+  title     = {On giant components in research collaboration networks: Case of engineering disciplines in Malaysia},
+  journal   = {Malaysian Journal of Library \& Information Science},
+  year      = {2013},
+  volume    = {18},
+  number    = {2},
+  pages     = {65-78},
+  owner     = {Vincent},
+  timestamp = {2023.03.15},
+  url       = {https://ejournal.um.edu.my/index.php/MJLIS/article/view/1869},
+}
+
+@Article{Kumar2013a,
+  author    = {Kumar, S. and Jan, J. M.},
+  title     = {Research collaboration networks of two {OIC} nations: comparative study between Turkey and Malaysia in the field of `Energy Fuels', 2009-2011},
+  journal   = {Scientometrics},
+  year      = {2013},
+  volume    = {98},
+  pages     = {387-414},
+  doi       = {10.1007/s11192-013-1059-8},
+  owner     = {Vincent},
+  timestamp = {2023.03.15},
+}
+
+@Article{Kumar2014,
+  author    = {Kumar, S. and Jan, J. M.},
+  title     = {Relationship between authors' structural position in the collaboration network and research productivity},
+  journal   = {Program},
+  year      = {2014},
+  volume    = {48},
+  number    = {4},
+  pages     = {355-369},
+  doi       = {10.1108/prog-01-2013-0002},
+  owner     = {Vincent},
+  timestamp = {2023.03.15},
+}
+
 @Article{Kumar2016,
   author    = {Kumar, A. and Irsoy, O. and Ondruska, P. and Iyyer, M. and Bradbury, J. and Gulrajani, I. and Zhong, V. and Paulus, R. and Socher, R.},
   title     = {Ask me anything: Dynamic memory networks for natural language processing},
@@ -27124,6 +27188,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.01.04},
   url       = {http://proceedings.mlr.press/v48/kumar16.html},
+}
+
+@Article{Kumar2016a,
+  author    = {Kumar, S. and Markscheffel, B.},
+  title     = {Bonded-communities in {HantaVirus} research: a research collaboration network ({RCN}) analysis},
+  journal   = {Scientometrics},
+  year      = {2016},
+  volume    = {109},
+  pages     = {533-550},
+  doi       = {10.1007/s11192-016-1942-1},
+  owner     = {Vincent},
+  timestamp = {2023.03.15},
 }
 
 @Article{Kumar2018,
@@ -27868,6 +27944,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {https://ijoc.org/index.php/ijoc/article/view/1094},
+}
+
+@InProceedings{Lattanzi2009,
+  author    = {Lattanzi, S. and Sivakumar, D.},
+  title     = {Affiliation networks},
+  booktitle = {41st Annual ACM Symposium on Theory of computing},
+  year      = {2009},
+  pages     = {427-434},
+  doi       = {10.1145/1536414.1536474},
+  owner     = {Vincent},
+  timestamp = {2023.03.15},
 }
 
 @Article{Laughlin2010,
@@ -30299,6 +30386,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/d19-1656},
   owner     = {Vincent},
   timestamp = {2022.07.02},
+}
+
+@InProceedings{Liu2019d,
+  author    = {Liu, Q. B. and Gao, S. and Guo, B. F. and Liu, H. and Feng, Y. Z. and Xia, H.},
+  title     = {Research and Development of Movie Social System},
+  booktitle = {3rd International Conference on Mechatronics and Intelligent Robotics},
+  year      = {2019},
+  volume    = {166},
+  series    = {Procedia Computer Science},
+  pages     = {154-159},
+  doi       = {10.1016/j.procs.2020.02.039},
+  owner     = {Vincent},
+  timestamp = {2023.03.15},
 }
 
 @Article{Liu2020,
@@ -33940,6 +34040,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1126/science.298.5594.824},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@InProceedings{Milosavljevic2022,
+  author    = {Milosavljević, S.},
+  title     = {Milorad Pavić's Dictionary of the Khazars from the perspective of network theory},
+  booktitle = {18th Young Forum of Slavic Literary Studies},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2023.03.13},
+  url       = {https://www.researchgate.net/publication/369182021_Milorad_Pavic's_Dictionary_of_the_Khazars_from_the_perspective_of_network_theory},
 }
 
 @Article{Milroy1985,
@@ -37727,6 +37837,38 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.20},
 }
 
+@InProceedings{Paepcke2021,
+  author    = {Päpcke, S. and Brandes, U.},
+  title     = {Character Networks in a Collection of 19th Century German Novellas},
+  booktitle = {2nd International Conference of the European Association for Digital Humanties},
+  year      = {2021},
+  owner     = {Vincent},
+  timestamp = {2023.03.14},
+  url       = {https://eadh2021.culintec.de/P_PCKE_Simon_Character_Networks_in_a_Collection_of_19th_Cent.html},
+}
+
+@PhdThesis{Paepcke2022,
+  author      = {Päpcke, S.},
+  title       = {Novella Networks},
+  year        = {2022},
+  type        = {PhD Thesis},
+  institution = {ETH Zurich},
+  owner       = {Vincent},
+  timestamp   = {2023.03.14},
+  url         = {https://www.research-collection.ethz.ch/handle/20.500.11850/602443},
+}
+
+@Article{Paepcke2022a,
+  author    = {Päpcke, S. and Weitin, T. and Herget, K. and Glawion, A. and Brandes, U.},
+  title     = {Stylometric similarity in literary corpora: Non-authorship clustering and Deutscher Novellenschatz},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2022},
+  volume    = {in press},
+  doi       = {10.1093/llc/fqac039},
+  owner     = {Vincent},
+  timestamp = {2023.03.14},
+}
+
 @Book{Page1988,
   title     = {Speech in the english novel},
   publisher = {Palgrave Macmillan},
@@ -37923,6 +38065,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/2647868.2654990},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@Article{Pang2023,
+  author    = {Pang, N. and Sun, M. and Zhu, H.},
+  title     = {Louise or Ferdinand? Exploring the protagonists of Love and Intrigue using social network analysis},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2023},
+  volume    = {in press},
+  doi       = {10.1093/llc/fqad007},
+  owner     = {Vincent},
+  timestamp = {2023.03.10},
 }
 
 @Article{Panko2022,
@@ -50280,6 +50433,16 @@ arXiv: http://arxiv.org/abs/1410.3560},
   timestamp = {2021.09.18},
 }
 
+@InProceedings{Viana2014,
+  author    = {Viana, W. and Onofre Santos, P. and Couto da Silva, A. P. and Moro, M. M.},
+  title     = {A Network Analysis on Movie Producing Teams and Their Success},
+  booktitle = {9th Latin American Web Congress},
+  year      = {2014},
+  doi       = {10.1109/laweb.2014.10},
+  owner     = {Vincent},
+  timestamp = {2023.03.15},
+}
+
 @Article{Viard2018,
   author    = {Viard, T. and Fournier-S'niehotta, R.},
   title     = {Movie rating prediction using content-based and link stream features},
@@ -54474,6 +54637,19 @@ arXiv: http://arxiv.org/abs/1410.3560},
   timestamp = {2020.02.04},
 }
 
+@Article{Zhang2019b,
+  author    = {Zhang, X.-J. and Tang, Y. and Xiong, J. and Wang, W.-J. and Zhang, Y.-C.},
+  title     = {How Network Topologies Impact Project Alliance Performance: Evidence from the Movie Industry},
+  journal   = {Entropy},
+  year      = {2019},
+  volume    = {21},
+  number    = {9},
+  pages     = {859},
+  doi       = {10.3390/e21090859},
+  owner     = {Vincent},
+  timestamp = {2023.03.15},
+}
+
 @Article{Zhang2020,
   author    = {Zhang, X.-Y. and Huang, Y.-P. and Mi, Y. and Pei, Y.-T. and Zou, Q. and Wang, S.},
   title     = {Video sketch: A middle-level representation for action recognition},
@@ -54673,6 +54849,17 @@ arXiv: http://arxiv.org/abs/1410.3560},
   doi       = {10.1145/1526709.1526781},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@InProceedings{Zheleva2009a,
+  author    = {Zheleva, E. and Sharara, H. and Getoor, L.},
+  title     = {Co-evolution of social and affiliation networks},
+  booktitle = {15th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year      = {2009},
+  pages     = {1007-1016},
+  doi       = {10.1145/1557019.1557128},
+  owner     = {Vincent},
+  timestamp = {2023.03.15},
 }
 
 @Article{Zheng2008,
