--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -6084,6 +6084,16 @@
   timestamp = {2021.06.24},
 }
 
+@Book{Boyd1985,
+  title     = {Culture and the evolutionary process},
+  publisher = {University of Chicago Press},
+  year      = {1985},
+  author    = {Boyd, R. and Richerson, P. J.},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+  url       = {https://press.uchicago.edu/ucp/books/book/chicago/C/bo5970597.html},
+}
+
 @Article{boyd2007,
   author    = {Boyd, D. M. and Ellison, N. B.},
   title     = {Social Network Sites: Definition, History, and Scholarship},
@@ -15853,6 +15863,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://dh2018.adho.org/?p=9362},
 }
 
+@InProceedings{Fischer2019,
+  author    = {Fischer, F. and Börner, I. and Göbel, M. and Hechtl, A. and Kittel, C. and Milling, C. and Trilcke, P.},
+  title     = {Programmable Corpora: Introducing DraCor, an Infrastructure for the Research on European Drama},
+  booktitle = {Digital Humanities Conference},
+  year      = {2019},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+  url       = {https://doi.org/10.5281/zenodo.4284002},
+}
+
 @InCollection{Fischer2021,
   author    = {Fischer, F. and Skorinkin, D.},
   title     = {Social Network Analysis in Russian Literary Studies},
@@ -17436,6 +17456,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2022.12.07},
   url       = {https://www.jstor.org/stable/40920585},
+}
+
+@Article{Gasparov2016,
+  author    = {Gasparov, M.},
+  title     = {Boris Yarkho's works on literary theory},
+  journal   = {Studia Metrica et Poetica},
+  year      = {2016},
+  volume    = {3},
+  number    = {2},
+  pages     = {130-150},
+  doi       = {10.12697/smp.2016.3.2.05},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
 }
 
 @InCollection{Gates2006,
@@ -24685,6 +24718,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cvpr.2019.01175},
   owner     = {Vincent},
   timestamp = {2021.09.19},
+}
+
+@Article{Kanatova2017,
+  author    = {Kanatova, M. and Milyakina, A. and Pilipovec, T. and Shelya, A. and Sobchuk, O. and Tinits, P. and},
+  title     = {Broken Time, Continued Evolution: Anachronies in Contemporary Films},
+  journal   = {Stanford Literaray Lab},
+  year      = {2017},
+  volume    = {14},
+  pages     = {5-6},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+  url       = {https://litlab.stanford.edu/LiteraryLabPamphlet14.pdf},
 }
 
 @Article{Kanungo2002,
@@ -33673,6 +33718,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2013.03.11},
 }
 
+@Article{Mesoudi2017,
+  author    = {Mesoudi, A.},
+  title     = {Pursuing Darwin's curious parallel: Prospects for a science of cultural evolution},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2017},
+  volume    = {114},
+  number    = {30},
+  pages     = {7853-7860},
+  doi       = {10.1073/pnas.1620741114},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+}
+
 @Article{Mestyan2013,
   author    = {Mesty{\'{a}}n, M. and Yasseri, T. and Kert{\'{e}}sz, J.},
   title     = {Early Prediction of Movie Box Office Success Based on Wikipedia Activity Big Data},
@@ -35774,6 +35832,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1075/li.30.1.03nad},
   owner     = {Vincent},
   timestamp = {2018.04.25},
+}
+
+@PhdThesis{Nagel2011,
+  author      = {Nagel, U.},
+  title       = {Analysis of Network Ensembles},
+  year        = {2011},
+  type        = {PhD Thesis},
+  institution = {Universität Konstanz},
+  owner       = {Vincent},
+  timestamp   = {2023.03.16},
+  url         = {http://nbn-resolving.de/urn:nbn:de:bsz:352-212891},
 }
 
 @InProceedings{Nagrani2017,
@@ -40821,6 +40890,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.03.25},
 }
 
+@Electronic{Raymond2020,
+  author       = {Raymond, C.},
+  month        = {06},
+  year         = {2020},
+  title        = {Classifying Shakespeare with Networks},
+  howpublished = {\url{https://cameronraymond.me/blog/shakespeare-netlsd/}},
+  organization = {{Towards Data Science}},
+  url          = {https://cameronraymond.me/blog/shakespeare-netlsd/},
+  owner        = {Vincent},
+  timestamp    = {2023.03.16},
+}
+
 @InProceedings{Rder2015,
   author    = {Röder, M. and Both, A. and Hinneburg, A.},
   title     = {Exploring the Space of Topic Coherence Measures},
@@ -42313,6 +42394,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/jiplp/jpt240},
   owner     = {Vincent},
   timestamp = {2021.09.23},
+}
+
+@Article{Rosch1975,
+  author    = {Rosch, E.},
+  title     = {Cognitive Representations of Semantic Categories},
+  journal   = {Journal of Experimental Psychology},
+  year      = {1975},
+  volume    = {104},
+  pages     = {192-233},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+  url       = {https://psycnet.apa.org/record/1976-00172-001},
+}
+
+@Book{Rosch1977,
+  title     = {Human Categorization},
+  publisher = {Academic Press},
+  year      = {1977},
+  author    = {Rosch, E.},
+  series    = {Studies in Cross-Cultural Psychology},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+  url       = {https://www.degruyter.com/database/COGBIB/entry/cogbib.10283/html},
 }
 
 @Article{Rosegrant2009,
@@ -47450,6 +47554,18 @@ arXiv: http://arxiv.org/abs/1410.3560},
   owner     = {xavier},
   timestamp = {2015.09.06},
   url       = {http://snap.stanford.edu/class/cs224w-2011/proj/laneyk_Finalwriteup_v1.pdf},
+}
+
+@Article{Sugishita2023,
+  author    = {Sugishita, K. and Masuda, N.},
+  title     = {Social network analysis of Japanese manga: similarities to real-world social networks and trends over decades},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {physics.soc-ph},
+  pages     = {2303.07208},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+  url       = {https://arxiv.org/abs/2303.07208},
 }
 
 @Article{Sugiyama1981,
@@ -53512,6 +53628,19 @@ arXiv: http://arxiv.org/abs/1410.3560},
   owner     = {Vincent},
   timestamp = {2020.12.15},
   url       = {https://arxiv.org/abs/1909.03193},
+}
+
+@Article{Yarkho2019,
+  author    = {Yarkho, B. I.},
+  title     = {Speech Distribution in Five-Act Tragedies (A Question of Classicism and Romanticism)},
+  journal   = {Journal of Literary Theory},
+  year      = {2019},
+  volume    = {13},
+  number    = {1},
+  pages     = {13-76},
+  doi       = {10.1515/jlt-2019-0002},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
 }
 
 @InProceedings{Yassine2010,
