--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1949,6 +1949,16 @@
   timestamp = {2019.03.22},
 }
 
+@Book{Arijon1991,
+  title     = {Grammar of the Film Language},
+  publisher = {Silman-James Press},
+  year      = {1991},
+  author    = {Arijon, D.},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+  url       = {https://books.google.com.hk/books?id=6bQlAQAAIAAJ},
+}
+
 @InProceedings{Arinbjanar2009,
   author    = {Arinbjanar, M. and Barber, H. and Kudenko, D.},
   title     = {A critical review of interactive drama systems},
@@ -2558,6 +2568,16 @@
   owner     = {Vincent},
   timestamp = {2022.08.31},
   url       = {https://books.google.fr/books/?id=1jG8AAAAIAAJ},
+}
+
+@InProceedings{Bain2020,
+  author    = {Bain, M. and Nagrani, A. and Brown, A. and Zisserman, A.},
+  title     = {Condensed movies: story based retrieval with contextual embeddings},
+  booktitle = {Asian Conference on Computer Vision},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+  url       = {https://openaccess.thecvf.com/content/ACCV2020/html/Bain_Condensed_Movies_Story_Based_Retrieval_with_Contextual_Embeddings_ACCV_2020_paper.html},
 }
 
 @Article{Baixeries2013,
@@ -5567,6 +5587,16 @@
   url       = {https://books.google.fr/books?id=HhJb5Ks2PvEC},
 }
 
+@Book{Bordwell1985a,
+  title     = {The Classical Hollywood Cinema: Film Style \& Mode of Production to 1960},
+  publisher = {Routledge},
+  year      = {1985},
+  author    = {Bordwell, D. and Staiger, J. and Thompson, K.},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+  url       = {https://books.google.com.hk/books?id=AkUOAAAAQAAJ},
+}
+
 @Book{Bordwell1993,
   title     = {Film Art: An Introduction},
   publisher = {McGraw-Hill},
@@ -7893,6 +7923,20 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.09.23},
 }
 
+@InProceedings{Cao2020,
+  author    = {Cao, J. and Gan, Z. and Cheng, Yu. and Yu, L. and Chen, Y.-C. and Liu, J.},
+  title     = {Behind the scene: revealing the secrets of pre-trained vision-and-language models},
+  booktitle = {European Conference on Computer Vision},
+  year      = {2020},
+  volume    = {12351},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {565-580},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-58539-6_34},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+}
+
 @Article{Cardillo2013,
   author    = {Cardillo, A. and Gómez-Gardeñes, J. and Zanin, M. and Romance, M. and Papo, D. and del Pozo, F. and Boccaletti, S.},
   title     = {Emergence of network features from multiplexity},
@@ -7994,6 +8038,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1163/15685373-12340009},
   owner     = {Vincent},
   timestamp = {2022.08.30},
+}
+
+@InProceedings{Carreira2017,
+  author    = {Carreira, J. and Zisserman, A.},
+  title     = {Quo Vadis, Action Recognition? A New Model and the Kinetics Dataset},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition},
+  year      = {2017},
+  doi       = {10.1109/cvpr.2017.502},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
 }
 
 @Book{Carrington2005,
@@ -8133,6 +8187,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1386/cjcs.10.1.125_1},
   owner     = {Vincent},
   timestamp = {2022.11.28},
+}
+
+@Article{Cascante-Bonilla2019,
+  author    = {Cascante-Bonilla, P. and Sitaraman, K. and Luo, M. and Ordonez, V.},
+  title     = {Moviescope: Large-scale Analysis of Movies using Multiple Modalities},
+  journal   = {arXiv},
+  year      = {2019},
+  volume    = {cs.CV},
+  pages     = {1908.03180},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+  url       = {https://arxiv.org/abs/1908.03180},
 }
 
 @Article{Casey2010,
@@ -8940,6 +9006,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1016/j.socnet.2015.10.003},
   owner     = {Vincent},
   timestamp = {2022.11.15},
+}
+
+@InProceedings{Chen2016b,
+  author    = {Chen, T. and Guestrin, C.},
+  title     = {{XGBoost}: a scalable tree boosting system},
+  booktitle = {22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year      = {2016},
+  pages     = {785-794},
+  doi       = {10.1145/2939672.2939785},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
 }
 
 @InProceedings{Chen2016h,
@@ -11086,6 +11163,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.07.21},
 }
 
+@Article{Cutting2016,
+  author    = {Cutting, J. E.},
+  title     = {Narrative theory and the dynamics of popular movies},
+  journal   = {Psychonomic Bulletin \& Review},
+  year      = {2016},
+  volume    = {23},
+  number    = {6},
+  pages     = {1713-1743},
+  doi       = {10.3758/s13423-016-1051-4},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+}
+
 @Article{Czachesz2012,
   author    = {Czachesz, I.},
   title     = {God in the Fractals: Recursiveness as a Key to Religious Behavior},
@@ -11898,6 +11988,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1111/j.1467-6486.2005.00529.x},
   owner     = {Vincent},
   timestamp = {2020.11.30},
+}
+
+@InProceedings{Delmonte2017,
+  author    = {Delmonte, R. and Marchesini, G.},
+  title     = {A semantically-based computational approach to narrative structure},
+  booktitle = {12th International Conference on Computational Semantics},
+  year      = {2017},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+  url       = {https://aclanthology.org/W17-6906/},
 }
 
 @Article{DelVecchio2020,
@@ -15978,6 +16078,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.08},
 }
 
+@Article{Fleiss1971,
+  author    = {Fleiss, J. L.},
+  title     = {Measuring nominal scale agreement among many raters},
+  journal   = {Psychological Bulletin},
+  year      = {1971},
+  volume    = {76},
+  number    = {5},
+  pages     = {378},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+  url       = {https://psycnet.apa.org/record/1972-05083-001},
+}
+
 @InProceedings{Flekova2015,
   author    = {Flekova, L. and Gurevych, I.},
   title     = {Personality Profiling of Fictional Characters using Sense-Level Links between Lexical Resources},
@@ -17292,6 +17405,20 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2021.12.27},
   url       = {https://www.aaai.org/ocs/index.php/ICWSM/ICWSM14/paper/view/8070},
+}
+
+@InProceedings{Garcia2020,
+  author    = {Garcia, N. and Nakashima, Y.},
+  title     = {Knowledge-Based Video Question Answering with Unsupervised Scene Descriptions},
+  booktitle = {16th European Conference on Computer Vision},
+  year      = {2020},
+  volume    = {12363},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {581-598},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-58523-5_34},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
 }
 
 @Article{Garcia-Sanchez2021,
@@ -22893,6 +23020,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {https://www.cambridge.org/core/books/shakespearean-stage-space/4B30F2E4F009D7C3C67C0EFB8A344205},
+}
+
+@Book{Iglesias2005,
+  title     = {Writing for Emotional Impact},
+  publisher = {Wingspan},
+  year      = {2005},
+  author    = {Iglesias, K.},
+  owner     = {Vincent},
+  timestamp = {2023.03.16},
+  url       = {https://books.google.fr/books/?id=zb9fXs2ioW0C},
 }
 
 @Article{Ikonomakis2005,
@@ -33911,6 +34048,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.08.31},
 }
 
+@InProceedings{Mikhalkova2020,
+  author    = {Mikhalkova, E. and Protasov, T. and Sokolova, P. and Bashmakova, A. and Drozdova, A.},
+  title     = {Modelling narrative elements in a short story: a study on annotation schemes and guidelines},
+  booktitle = {12th Language Resources and Evaluation Conference},
+  year      = {2020},
+  pages     = {126-132},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://aclanthology.org/2020.lrec-1.16/},
+}
+
 @InProceedings{Mikolov2013,
   author    = {Mikolov, T. and Sutskever, I. and Chen, K. and Corrado, G. and Dean, J.},
   title     = {Distributed representations of words and phrases and their compositionality},
@@ -34369,6 +34517,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/08874417.2020.1774442},
   owner     = {Vincent},
   timestamp = {2021.09.23},
+}
+
+@InProceedings{Mittal2021,
+  author    = {Mittal, T. and Mathur, P. and Bera, A. and Manocha, D.},
+  title     = {Affect2mm: affective analysis of multimedia content using emotion causality},
+  booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year      = {2021},
+  pages     = {5661-5671},
+  doi       = {10.1109/CVPR46437.2021.00561},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @Article{Mittell2006,
@@ -38192,6 +38351,31 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/2020.acl-main.174},
   owner     = {Vincent},
   timestamp = {2022.06.28},
+}
+
+@InProceedings{Papalampidi2021,
+  author    = {Papalampidi, P. and Keller, F. and Lapata, M.},
+  title     = {Movie Summarization via Sparse Graph Construction},
+  booktitle = {AAAI Conference on Artificial Intelligence},
+  year      = {2021},
+  volume    = {35},
+  number    = {15},
+  pages     = {13631-13639},
+  doi       = {10.1609/aaai.v35i15.17607},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+}
+
+@Article{Papalampidi2021a,
+  author    = {Papalampidi, P. and Keller, F. and Lapata, M.},
+  title     = {Film Trailer Generation via Task Decomposition},
+  journal   = {arXiv},
+  year      = {2021},
+  volume    = {cs.CV},
+  pages     = {2111.08774},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://arxiv.org/abs/2111.08774},
 }
 
 @Article{Papamarinopoulos2012,
@@ -42268,6 +42452,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cvpr.2015.7298940},
   owner     = {Vincent},
   timestamp = {2020.01.03},
+}
+
+@Article{Rohrbach2017,
+  author    = {Rohrbach, A. and Torabi, A. and Rohrbach, M. and Tandon, N. and Pal, C. and Larochelle, H. and Courville, A. and Schiele, B.},
+  title     = {Movie Description},
+  journal   = {International Journal of Computer Vision},
+  year      = {2017},
+  volume    = {123},
+  pages     = {94-120},
+  doi       = {10.1007/s11263-016-0987-1},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @InProceedings{Rohrer1998,
@@ -47742,6 +47938,18 @@ arXiv: http://arxiv.org/abs/1410.3560},
   timestamp = {2021.09.19},
 }
 
+@Article{Sun2022,
+  author    = {Sun, Y. and Chao, Q. and Li, B.},
+  title     = {Synopses of movie narratives: a video-language dataset for story understanding},
+  journal   = {arXiv},
+  year      = {2022},
+  volume    = {cs.CV},
+  pages     = {2203.05711},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://arxiv.org/abs/2203.05711},
+}
+
 @Article{Sundararaman2005,
   author    = {Sundararaman, B. and Buy, U. and Kshemkalyani, A. D.},
   title     = {Clock synchronization for wireless sensor networks: a survey},
@@ -51208,6 +51416,17 @@ arXiv: http://arxiv.org/abs/1410.3560},
   url       = {https://www.era.lib.ed.ac.uk/handle/1842/6434},
 }
 
+@InProceedings{Wallace2012,
+  author    = {Wallace, B. C.},
+  title     = {Multiple narrative disentanglement: unraveling infinite jest},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics},
+  year      = {2012},
+  pages     = {1-10},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://aclanthology.org/N12-1001/},
+}
+
 @InProceedings{Wallach2009,
   author    = {Wallach, H. M. and Murray, I. and Salakhutdinov, R. and Mimno, D.},
   title     = {Evaluation methods for topic models},
@@ -52228,6 +52447,18 @@ arXiv: http://arxiv.org/abs/1410.3560},
   owner     = {Vincent},
   timestamp = {2020.12.18},
   url       = {https://www.bloomsbury.com/us/the-making-of-the-pentateuch-9781850750635/},
+}
+
+@Article{Wi2020,
+  author    = {Wi, J. A. and Jang, S. and Kim, Y.},
+  title     = {Poster-Based Multiple Movie Genre Classification Using Inter-Channel Features},
+  journal   = {IEEE Access},
+  year      = {2020},
+  volume    = {8},
+  pages     = {66615-66624},
+  doi       = {10.1109/access.2020.2986055},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @InProceedings{Wiebe1990,
@@ -55050,6 +55281,20 @@ arXiv: http://arxiv.org/abs/1410.3560},
   doi       = {10.1093/llc/fqy065},
   owner     = {Vincent},
   timestamp = {2021.12.12},
+}
+
+@InCollection{Zhong2020,
+  author    = {Zhong, Y. and Wang, L. and Chen, J. and Yu, D. and Li, Y.},
+  title     = {Comprehensive Image Captioning via Scene Graph Decomposition},
+  booktitle = {European Conference on Computer Vision},
+  publisher = {Springer},
+  year      = {2020},
+  volume    = {12359},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {211-229},
+  doi       = {10.1007/978-3-030-58568-6_13},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @Article{Zhou2003a,
