--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -5067,6 +5067,18 @@
   timestamp = {2019.03.28},
 }
 
+@InCollection{Bleier2018,
+  author    = {Bleier, R. and Klug, H. W.},
+  title     = {Discussing Interfaces in Digital Scholarly Editing},
+  booktitle = {Digital Scholarly Editions as Interfaces},
+  publisher = {BoD},
+  year      = {2018},
+  pages     = {V-XV},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://kups.ub.uni-koeln.de/9094/},
+}
+
 @Article{Bloch2017,
   author    = {Bloch, F. and Jackson, M. O. and Tebaldi, P.},
   title     = {Centrality Measures in Networks},
